syntax = "proto3";

package io.vangogiel.chat;

message ChatsListRequest {
  string user_uuid = 1;
}
