syntax = "proto3";

package io.vangogiel.chat;

message IncomingConversationRequest {
  string from_username = 1;
  string to_username = 2;
}
