syntax = "proto3";

package io.vangogiel.chat;

message NewUser {
  string username = 1;
}
