syntax = "proto3";

package io.vangogiel.chat;

message User {
  string username = 1;
  int64 last_active_timestamp = 2;
}

message UsersListStreamResponse {
  repeated User listOfUsers = 1;
}
